# pixelconvert

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Instructions.txt  LICENSE  OVERVIEW.md  README.md  dev.pinkpixel.PixelConvert.yml  meson.build  meson_options.txt  org.pinkpixel.PixelConvert.yml
.codex/agents/: build-engineer.md  documentation-engineer.md
.codex/prompts/: plan-pixelConvert.prompt.md
.github/: copilot-instructions.md
.github/agents/: build-engineer.md  dependency-manager.md  documentation-engineer.md  rust-engineer.md
.github/skills/rust-pro/: SKILL.md
build-aux/meson/: postinstall.py
data/: dev.pinkpixel.PixelConvert.desktop.in  dev.pinkpixel.PixelConvert.gschema.xml  dev.pinkpixel.PixelConvert.metainfo.xml.in  meson.build  org.pinkpixel.PixelConvert.desktop.in  org.pinkpixel.PixelConvert.gschema.xml  org.pinkpixel.PixelConvert.metainfo.xml.in
data/icons/: meson.build
src/: batch.rs  converter.rs  main.rs  meson.build  preferences.rs  preview.rs  window.rs
